use-case uneven list orientaion on every new page creation --fixed updated global css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3058,3 +3058,6 @@ textarea.form-control-txt {
     transform: scale(1) rotate(360deg);
   }
 }
+.blog_content > ul > li {
+  white-space: unset !important;
+}
